--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,8 +112,10 @@
     color: #FFFFFF;
 }
 .seo-text__content{
-    font-size: 16px;
-    line-height: 26px;
+    /*font-size: 16px;*/
+    /*line-height: 26px;*/
+    font-size: 13px;
+    line-height: 21px;
     color: #FFFFFF;
     text-shadow: 0 4px 40px rgba(0, 0, 0, 0.25);
 }
@@ -129,12 +131,15 @@
 .seo-text__content h5,
 .seo-text__content h6{
     font-family: 'WorkSans-SemiBold', sans-serif;
-    font-size: 18px;
-    line-height: 28px;
+    /*font-size: 18px;*/
+    /*line-height: 28px;*/
+    font-size: 14px;
+    line-height: 22px;
 }
 .seo-text__content h5:not(:first-child),
 .seo-text__content h6:not(:first-child){
-    margin: 30px 0;
+    /*margin: 30px 0;*/
+    margin: 24px 0;
 }
 .seo-text__content ul{
     list-style: initial;
@@ -142,7 +147,8 @@
     padding-left: 17px;
 }
 .seo-text__content li{
-    margin-top: 15px;
+    /*margin-top: 15px;*/
+    margin-top: 12px;
 }
 .seo-text__btn{
     position: relative;
@@ -587,7 +593,7 @@
 }
 .home-top__content{
     width: 100%;
-    max-width: 470px;
+    max-width: 500px;
     margin-top: 237px;
 }
 .home-top__line{
@@ -1631,6 +1637,51 @@
 .contacts-page__item span:first-child{
     margin-left: 30px;
 }
+.contacts-map{
+    position: relative;
+}
+.contacts-map-b{
+    position: absolute;
+    top: 300px;
+    left: 50%;
+    width: 100%;
+    max-width: 410px;
+    padding: 30px;
+    -webkit-transform: translate(-50%, 0);
+    -moz-transform: translate(-50%, 0);
+    -ms-transform: translate(-50%, 0);
+    -o-transform: translate(-50%, 0);
+    transform: translate(-50%, 0);
+    background: #151719;
+    border: 1px solid #323435;
+    box-shadow: 0 10px 45px rgba(14, 40, 83, 0.05);
+    font-size: 16px;
+    line-height: 26px;
+    color: #FFFFFF;
+    z-index: 99;
+}
+.contacts-map-b__more{
+    position: absolute;
+    top: 30px;
+    right: 15px;
+}
+.contacts-map-b a{
+    color: #FFFFFF;
+}
+.contacts-map-b svg{
+    margin-right: 15px;
+}
+.contacts-map-b__title{
+    font-size: 24px;
+    line-height: 28px;
+}
+.contacts-map-b__row{
+    margin-top: 25px;
+}
+.contacts-map-b__item{
+    display: flex;
+    align-items: center;
+}
 #map{
     height: 809px;
 }
@@ -1971,6 +2022,163 @@
     opacity: 0.45;
 }
 /*-- HOME V2 ---*/
+.home-page--v2{
+    background: #010202 url('../img/home-v2/BG.jpg') top center no-repeat;
+}
+.home-top--v2{
+    background: transparent url('../img/home-v2/top.png') 80% 40% no-repeat;
+}
+.home-top-form{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    max-width: 300px;
+    padding: 30px;
+    background-color: rgba(124, 124, 124, 0.4);
+    backdrop-filter: blur(30px);
+}
+.home-top-form__title{
+    font-family: 'WorkSans-Bold', sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 16px;
+    text-transform: uppercase;
+}
+.home-top-form__row{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: 15px;
+}
+.home-top-form__label{
+    margin-bottom: 8px;
+    font-size: 14px;
+    line-height: 16px;
+}
+.home-top-form__select{
+    width: 100%;
+    padding: 10px 40px 10px 20px;
+    border: none;
+    outline: none;
+    font-size: 14px;
+    line-height: 16px;
+    color: #9D9D9D;
+    background: #1D1D1D url('../img/home-v2/select.svg') 95% center no-repeat;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+.home-top-form__btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 36px;
+    margin-top: 20px;
+    font-size: 14px;
+    line-height: 16px;
+    text-transform: uppercase;
+    color: #151719;
+    background-color: #FFFFFF;
+}
+.home-bands-v2{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 192px;
+}
+.home-promo{
+    position: relative;
+    padding: 192px 0;
+    text-align: center;
+    background-color: transparent;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: #FFFFFF;
+    z-index: 2;
+}
+.home-promo:after,
+.home-promo:before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
+.home-promo:after{
+    background: -o-radial-gradient(50% 50%, 115.78% 115.78%, rgba(1, 2, 2, 0) 0%, #010202 100%);
+    background: radial-gradient(115.78% 115.78% at 50% 50%, rgba(1, 2, 2, 0) 0%, #010202 100%);
+}
+.home-promo:before{
+    background-color: rgba(1, 2, 2, 0.19);
+}
+.home-promo__inner{
+    position: relative;
+    z-index: 3;
+}
+.home-promo h2{
+    margin-bottom: 30px;
+}
+.home-numbers{
+    padding: 170px 0 56px 0;
+    background-color: #010202;
+    color: #FFFFFF;
+}
+.home-numbers__subtitle{
+    width: 100%;
+    max-width: 770px;
+    margin: 30px auto 40px auto;
+    font-size: 16px;
+    line-height: 28px;
+    text-align: center;
+}
+.home-numbers__btn{
+    display: flex;
+    justify-content: center;
+}
+.home-numbers__items{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 90px;
+}
+.home-numbers-item{
+    position: relative;
+    text-align: center;
+    z-index: 2;
+}
+.home-numbers-item__number{
+    font-family: 'UniNeue', sans-serif;
+    font-weight: 500;
+    font-size: 78px;
+    line-height: 60px;
+}
+.home-numbers-item__text{
+    margin-top: 40px;
+    font-size: 16px;
+    line-height: 16px;
+}
+.home-numbers-item__behind{
+    position: absolute;
+    top: 0;
+    left: 50%;
+    -webkit-transform: translate(-50%, 0);
+    -moz-transform: translate(-50%, 0);
+    -ms-transform: translate(-50%, 0);
+    -o-transform: translate(-50%, 0);
+    transform: translate(-50%, 0);
+    font-family: 'UniNeue-Bold', sans-serif;
+    font-weight: 800;
+    font-size: 100px;
+    line-height: 60px;
+    letter-spacing: 0.1em;
+    color: #1A2028;
+    z-index: -1;
+}
 .home-feedbacks{
     padding-top: 114px;
     background-color: #010202;
@@ -2107,6 +2315,58 @@
 }
 #homeMap{
     height: 470px;
+}
+.home-contacts__map{
+    position: relative;
+}
+.home-contacts-b{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    top: 85px;
+    left: 50%;
+    width: 100%;
+    max-width: 410px;
+    -webkit-transform: translate(-50%, 0);
+    -moz-transform: translate(-50%, 0);
+    -ms-transform: translate(-50%, 0);
+    -o-transform: translate(-50%, 0);
+    transform: translate(-50%, 0);
+    z-index: 999;
+}
+.home-contacts-b-item__row:not(:first-child){
+    margin-top: 25px;
+}
+.home-contacts-b-item{
+    width: 100%;
+    padding: 30px;
+    background: #151719;
+    border: 1px solid #323435;
+    box-shadow: 0 10px 45px rgba(14, 40, 83, 0.05);
+    color: #FFFFFF;
+}
+.home-contacts-b-item__top{
+    display: flex;
+    align-items: center;
+    font-family: 'WorkSans-Medium', sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 28px;
+    text-transform: uppercase;
+}
+.home-contacts-b-item__top svg{
+    margin-right: 10px;
+}
+.home-contacts-b-item__text{
+    margin-top: 10px;
+    font-size: 16px;
+    line-height: 26px;
+}
+.home-contacts-b__btn{
+    width: 100%;
+    max-width: 300px;
+    margin-top: 30px;
 }
 
 /*modals*/
